--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -917,7 +917,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ISu-QC-Q2K">
                                 <rect key="frame" x="16" y="348" width="343" height="30"/>
                                 <connections>
-                                    <segue destination="f4i-TE-mFB" kind="show" id="NM2-rh-ZkM"/>
+                                    <segue destination="f4i-TE-mFB" kind="show" identifier="walletAddIdentifier" id="NM2-rh-ZkM"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KFr-WE-xyL" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
@@ -1052,7 +1052,7 @@
         <image name="Wallet" width="26" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TpT-gc-8NG"/>
+        <segue reference="NM2-rh-ZkM"/>
         <segue reference="G9C-WG-gDw"/>
         <segue reference="eg6-mz-aaC"/>
     </inferredMetricsTieBreakers>
