--- a/IPSX/Flows/New Proxy/View/ToastAlertView.xib
+++ b/IPSX/Flows/New Proxy/View/ToastAlertView.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ToastAlertView" customModule="IPSX" customModuleProvider="target">
             <connections>
                 <outlet property="alertTextLabel" destination="ecc-D2-5F8" id="d0j-v8-EQf"/>
+                <outlet property="leftImageView" destination="bkD-w2-TT4" id="lj1-zF-9jo"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,13 +20,19 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="warningWhite" translatesAutoresizingMaskIntoConstraints="NO" id="bkD-w2-TT4">
+                    <rect key="frame" x="0.0" y="0.0" width="44" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="DC2-AI-8zM"/>
+                        <constraint firstAttribute="width" constant="44" id="wGv-05-2Pc"/>
+                    </constraints>
+                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BxK-Ne-Y7f">
                     <rect key="frame" x="0.0" y="0.0" width="44" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="TEq-KQ-mD9"/>
                         <constraint firstAttribute="width" constant="44" id="XE1-r6-uwJ"/>
                     </constraints>
-                    <state key="normal" image="warning"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecc-D2-5F8">
                     <rect key="frame" x="52" y="3" width="270" height="44"/>
@@ -50,20 +57,23 @@
                 <constraint firstItem="ecc-D2-5F8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="3" id="1a4-g8-1gn"/>
                 <constraint firstAttribute="trailing" secondItem="fse-GV-kn6" secondAttribute="trailing" id="5ID-Mf-l0z"/>
                 <constraint firstItem="fse-GV-kn6" firstAttribute="leading" secondItem="ecc-D2-5F8" secondAttribute="trailing" constant="3" id="9VH-8j-anP"/>
+                <constraint firstItem="bkD-w2-TT4" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="K9H-8S-sOd"/>
                 <constraint firstItem="ecc-D2-5F8" firstAttribute="leading" secondItem="BxK-Ne-Y7f" secondAttribute="trailing" constant="8" id="MRJ-Cg-YC6"/>
                 <constraint firstItem="BxK-Ne-Y7f" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Qos-HP-afo"/>
                 <constraint firstItem="fse-GV-kn6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="SaE-es-aSI"/>
                 <constraint firstAttribute="bottom" secondItem="ecc-D2-5F8" secondAttribute="bottom" constant="3" id="dDI-wV-A6p"/>
+                <constraint firstItem="bkD-w2-TT4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="fO2-5I-1at"/>
                 <constraint firstItem="BxK-Ne-Y7f" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gYf-oW-ckR"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="24.5" y="52"/>
         </view>
     </objects>
     <resources>
         <image name="icAlertBannerClose" width="26" height="26"/>
-        <image name="warning" width="18" height="16"/>
+        <image name="warningWhite" width="18" height="16"/>
     </resources>
 </document>
