--- a/IPSX/Flows/Login/Storyboard/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Login.storyboard
@@ -466,7 +466,7 @@
                                     <color key="titleColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="iJa-Yr-c0U" kind="unwind" unwindAction="unwindToLoginOptionsWithSegue:" id="Czp-TC-IjR"/>
+                                    <segue destination="iJa-Yr-c0U" kind="unwind" identifier="showLoginSegueID" unwindAction="unwindToLoginOptionsWithSegue:" id="Czp-TC-IjR"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A3O-NY-cF5" userLabel="Top Bar">
@@ -516,6 +516,9 @@
                                 <state key="disabled">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="resetPassAction:" destination="HfD-NE-Khu" eventType="touchUpInside" id="hQd-PU-GeP"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BZf-gw-FXf" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="165.5" y="321.5" width="44" height="44"/>
